# princeps

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: consensus-tests.yml
crates/clearing/: Cargo.toml
crates/clearing/src/: lib.rs
crates/clob/: Cargo.toml
crates/clob/src/: book.rs  lib.rs  types.rs
crates/codec/: Cargo.toml
crates/consensus/: Cargo.toml
crates/consensus/src/: bridge.rs  codec.rs  context.rs  engine_app.rs  lib.rs  node.rs  runner.rs  signing.rs  signing_provider.rs
crates/consensus/src/types/: address.rs  height.rs  mod.rs  proposal.rs  proposal_part.rs  validator.rs  value.rs  vote.rs
crates/evm/: Cargo.toml
crates/evm/src/: engine.rs  in_memory.rs  lib.rs  live_node.rs  openhl_evm.rs  princeps_evm.rs  reth_node.rs
crates/evm/src/precompiles/: mod.rs  revert_guard.rs
crates/funding/: Cargo.toml
crates/funding/src/: clock.rs  compute.rs  lib.rs  types.rs
crates/lending/: Cargo.toml
crates/lending/src/: accrual.rs  health.rs  irm.rs  lib.rs  position.rs  types.rs
crates/liquidation/: Cargo.toml
crates/liquidation/src/: adl.rs  compute.rs  insurance.rs  lib.rs  scanner.rs  types.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: compute.rs  lib.rs  state.rs  types.rs  verify.rs
crates/portfolio/: Cargo.toml
crates/portfolio/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vault/: Cargo.toml
crates/vault/src/: compute.rs  lib.rs  state.rs  types.rs
docs/: architecture.md  testing.md  threat-model.md
docs/adr/: 001-consensus-malachite.md  002-sequencer-centralized-then-decentralize.md  003-oracle-validator-quorum-push.md  004-base-unit-usd-stable.md  005-settlement-standalone-then-tempo.md  006-identity-anon-default-kyc-overlay.md  007-token-none-until-revenue.md  008-pre-token-validator-policy.md  README.md
docs/announcements/: 2026-06-01-launch.md
docs/plans/: v0-lending.md
scripts/: devnet-3.sh
