[package]
name         = "openhl-clearing"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[dependencies]
openhl-clob    = { path = "../clob" }
openhl-funding = { path = "../funding" }
serde          = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
