[package]
name = "princeps-funding"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[dependencies]
princeps-clob = { path = "../clob" }
serde       = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
