[package]
name         = "openhl-node"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[dependencies]
openhl-clob        = { path = "../clob" }
openhl-funding     = { path = "../funding" }
openhl-liquidation = { path = "../liquidation" }
openhl-oracle      = { path = "../oracle" }
openhl-vault       = { path = "../vault" }
serde              = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
