[package]
name = "princeps-node"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
authors      = { workspace = true }

[dependencies]
princeps-clob        = { path = "../clob" }
princeps-funding     = { path = "../funding" }
princeps-liquidation = { path = "../liquidation" }
princeps-oracle      = { path = "../oracle" }
princeps-vault       = { path = "../vault" }
serde              = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
